--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@ links:
   - title: SHARING SESSIONS
     url: /english-session
     sublinks:
-      - title: "English "
+      - title: English Videos
         url: /english-session
       - title: 华文视频
         url: /chinese-session
