--- a/_exhibitors/collection.yml
+++ b/_exhibitors/collection.yml
@@ -2,4 +2,5 @@ collections:
   exhibitors:
     output: true
     order:
+      - Singapore Centre for Chinese Language.md
       - Committee to Promote Chinese Language and Learning.md
