--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ links:
     url: /about-us/
   - title: OPENING CEREMONY
     url: /opening-ceremony/
+  - title: Programme
+    url: /programme
   - title: SHARING SESSIONS
     url: /english-session
     sublinks:
