--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,3 +30,10 @@ links:
         url: /exhibits/melayu-malay-language-exhibitions-a/gambaran-keseluruhan
       - title: தமிழ்மொழிக் காட்சிக்கூடம்
         url: /exhibits/tmail-exhibitions-a/tl-overview
+ - title: Activities
+   url: /activities
+   sublinks:
+      - title: Online Quest
+        url: /online-quest
+      - title: Explore@MTLS Activity Package​
+        url: https://www.unionbook.com.sg/blogs/news/mother-tongue-languages-symposium-mtls
