--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -35,4 +35,8 @@ links:
     sublinks:
       - title: Online Quest
         url: /online-quest
+      - title: Explore@MTLS Activity Package
+        url: https://www.unionbook.com.sg/blogs/news/mother-tongue-languages-symposium-mtls
+  - title: Books
+    url: https://www.unionbook.com.sg/blogs/news/mother-tongue-languages-symposium-mtls
    
