--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -31,7 +31,7 @@ links:
       - title: தமிழ்மொழிக் காட்சிக்கூடம்
         url: /exhibits/tamil-exhibitions-a/tl-overview
   - title: OPMTL TEACHER AWARD
-    url: /OPMTL-Award
+    url: /OPMTL-Awards
   - title: Activities
     url: /activities
     sublinks:
