--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -30,9 +30,15 @@ links:
         url: /exhibits/melayu-malay-language-exhibitions-a/gambaran-keseluruhan
       - title: தமிழ்மொழிக் காட்சிக்கூடம்
         url: /exhibits/tamil-exhibitions-a/tl-overview
+  - title: OPMTL TEACHER AWARD
+    url: /OPMTL-Award
   - title: Activities
     url: /activities
     sublinks:
       - title: Online Quest
         url: /online-quest
+      - title: Explore@MTLS Activity Package
+        url: https://www.unionbook.com.sg/blogs/news/mother-tongue-languages-symposium-mtls
+  - title: Books
+    url: https://www.unionbook.com.sg/blogs/news/mother-tongue-languages-symposium-mtls
      
