--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -40,5 +40,5 @@ links:
       - title: Explore@MTLS Activity Package
         url: https://www.unionbook.com.sg/blogs/news/mother-tongue-languages-symposium-mtls
   - title: Books
-    url: https://www.unionbook.com.sg/blogs/news/mother-tongue-languages-symposium-mtls
+    url: https://yuyi.com.sg/pages/mother-tongue-languages-symposium-mtls
      
