--- a/_config.yml
+++ b/_config.yml
@@ -54,5 +54,5 @@ prod: https://moe-mtls-cms-prod.netlify.app
 shareicon: /images/isomer-logo.svg
 is_government: false
 facebook-pixel: ""
-google_analytics: ""
+google_analytics: UA-175313072-2
 linkedin-insights: ""
